--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 </head>
 <body>
-    <canvas id="gameWorld" width="1024" height="768" style="background: white; border: 1px solid black"></canvas>
+    <canvas id="gameWorld" width="1024" height="768" style="background: url('./backgroud.jpg'); border: 1px solid black"
+        tabindex="1">
+    </canvas>
 </body>
 </html>
